Added client specificed audiences, also app support
Started the process of allowed a12n to run as an app on IIS.
Allow a client to specify the audience they want for their token.

--- a/templates/login-mfa.hbs
+++ b/templates/login-mfa.hbs
@@ -1,5 +1,5 @@
-<script src="/assets/simplewebauthn-browser.min.js"></script>
-<script src="/assets/webauthn.js"></script>
+<script src="{{appPath}}/assets/simplewebauthn-browser.min.js"></script>
+<script src="{{appPath}}/assets/webauthn.js"></script>
 
 <form action="{{ action }}" method="post">
   {{# if useTotp}}
