--- a/templates/register/webauthn.hbs
+++ b/templates/register/webauthn.hbs
@@ -1,5 +1,5 @@
-<script src="/assets/simplewebauthn-browser.min.js"></script>
-<script src="/assets/webauthn.js"></script>
+<script src="{{appPath}}/assets/simplewebauthn-browser.min.js"></script>
+<script src="{{appPath}}/assets/webauthn.js"></script>
 
 <form>
     <div id="error" class="msg error hidden"></div>
