--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -3,14 +3,14 @@
   <head>
     <title>{{ appName }} </title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/_hal-browser/assets/themes/lfo/main.css" type="text/css" />
-    <link rel="stylesheet" href="/assets/form.css" type="text/css" />
+    <link rel="stylesheet" href="{{appPath}}/_hal-browser/assets/themes/lfo/main.css" type="text/css" />
+    <link rel="stylesheet" href="{{appPath}}/assets/form.css" type="text/css" />
   </head>
   <body>
 
     <header>
       <div class="logo">
-        <img src="{{ logoUrl }}" alt="{{ appName }}" />
+        <img src="{{appPath}}{{ logoUrl }}" alt="{{ appName }}" />
       </div>
 
       <h1>{{ title }}</h1>
